working on authorization flow